vlib/v/checker/tests/option_var_unwrap_err.vv
fn abc_1() {
}

fn abc_2(a ?string) string {
	return a?
}

fn test_main() {
	abc_2(none)
}
